--- a/style.css
+++ b/style.css
@@ -1,31 +1,39 @@
 *{
-    border-collapse: collapse;
-    --padding-size: 20px;
+    box-sizing: border-box;
 }
-thead>tr>td {
-padding: 10px 10px;
- background-color: lightskyblue;
+.nav-list{
+    font-family: sans-serif;
+    font-size: 0;
+    white-space: nowrap;
 }
-td {
-    padding:var(--padding-size)
-}
-tbody>tr:nth-child(2n+2)>td:first-child{
-    background-color: lightgreen;
-}
-tbody>tr:nth-child(2n+1)>td:first-child{
-    background-color: green;
+.list-item {
+    font-size: 16px;
     color: white;
+    background-color: #e64a19;
+    list-style: none;
+    display: inline-block;
+    padding: 20px;
+    position: relative;
 }
-tbody>tr:nth-child(2n+2){
-    background-color: gray;
+
+.link{
+    color:inherit;
+    text-decoration: none;
+    display: inline-block;
 }
-tbody>tr:nth-child(2n+1){
-    background-color: lightgray;   
+.sub-nav-list{
+    position: absolute;
+    display: none;
+    right: 0;
+    left: 0;
+    padding: 0;
 }
-tfoot>tr>td:first-child{
-    background-color: green;
+.sub-list-item{
+    display: block;
 }
-td>span{
-    background-color: blue ;
-    color: white;
+.list-item:hover{
+    background-color: #8a2d0f;
+}
+.list-item:hover > .sub-nav-list{
+    display: block;
 }
