--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-*{
-    box-sizing: border-box;
-}
+
 .nav-list{
     font-family: sans-serif;
     font-size: 0;
     white-space: nowrap;
+    padding: 0;
+    width: 100vw;
 }
 .list-item {
     font-size: 16px;
@@ -17,6 +17,7 @@
 }
 
 .link{
+    box-sizing: border-box;
     color:inherit;
     text-decoration: none;
     display: inline-block;
@@ -31,9 +32,27 @@
 .sub-list-item{
     display: block;
 }
+
 .list-item:hover{
     background-color: #8a2d0f;
+    position: relative;
 }
 .list-item:hover > .sub-nav-list{
     display: block;
 }
+.sub-list-item > .sub-nav-list{
+    box-sizing: content-box;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 100%;
+ }
+
+ article{
+     border: 2px solid #8a2d0f;
+     font-family: sans-serif;
+     text-align: justify;
+     position: fixed;
+     bottom: 0;
+     padding: 10px 10px;
+ }
